--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,3 +16,12 @@
 }
 
 
+@media screen and (max-width: 900px) {
+  .home-container-2 {
+    max-width: 1100px;
+    width: 100%;
+    padding: 24px 0;
+    box-sizing: border-box;
+    margin: 0 auto;
+  }
+}
