--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,77 +42,39 @@
     box-sizing: border-box;
 }
 
+.home-container-1 .chatbot-button {
+    position: fixed;
+    bottom: 30px;
+    right: 20px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background: #0080ff;
+    padding: 1rem;
+    box-shadow: 0 0 15px -5px #ccc;
+    border: 1px solid #ddd;
+}
+.home-container-1 .chatbot-button .comment-button {
+    color: #fff;
+    font-size: 1.5em;
+}
 
 @media screen and (max-width: 400px) {
-    .home-container-2 {
-        margin:0;
+    .home-container-2{
+        margin: 0;
         padding: 10px;
-        width: 100%
+        width: 100%;
     }
+
+    
 }
 
 @media screen and (max-width: 980px) {
-    .home-container-2 {
-        margin:0;
+    .home-container-2{
+        margin: 0;
         padding: 10px;
-        width: 100%
-    }
-}
-
-@media screen and (max-width: 500px) {
-    .menu {
-        display:block;
-        margin-right: 10px
-    }
-
-    .nav-btn {
-        display: none
-    }
-
-    .main-nav {
-        justify-content: space-between
-    }
-}
-
-@media screen and (max-width: 1000px) {
-    .navbar form {
-        display:none
-    }
-
-    .nav-btn,.nav-logo {
-        padding: 5px 10px
-    }
-
-    .nav-logo img {
-        height: 25px
-    }
-}
-@media screen and (max-width: 500px) {
-    .left-sidebar {
-        display:none
-    }
-}
-
-@media screen and (max-width: 1000px) {
-    .left-sidebar {
-        width:200px
-    }
-}
-@media screen and (max-width: 900px) {
-    .right-sidebar {
-        display:none
-    }
-}
-@media screen and (max-width: 1000px) {
-    .main-bar {
-        margin-top:7%;
-        width: 60%
-    }
-}
-
-@media screen and (max-width: 700px) {
-    .main-bar {
-        margin-top:17%;
-        width: 100%
+        width: 100%;
     }
 }
