--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,7 +80,7 @@
         width: 100%
     }
 
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
     .sharepost-container {
         width:300px
     }
@@ -116,4 +116,4 @@
         height: 20px;
         width: 20px
     }
-}
+} */
