--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-  .home-container-1{
+/*   .home-container-1{
   min-height: 100vh;
   max-width: 1250px;
   width: 100%;
@@ -13,7 +13,7 @@
   border: 1px solid #d6d9dc;
   padding: 24px;
   box-sizing: border-box;
-}
+} */
 
 .home-container-1{
     display: flex;
@@ -29,25 +29,6 @@
     border: 1px solid #d6d9dc;
     padding: 24px;
     box-sizing: border-box;
-}
-
-.home-container-1 .chatbot-button {
-    position: fixed;
-    bottom: 30px;
-    right: 20px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    background: #0080ff;
-    padding: 1rem;
-    box-shadow: 0 0 15px -5px #ccc;
-    border: 1px solid #ddd;
-}
-.home-container-1 .chatbot-button .comment-button {
-    color: #fff;
-    font-size: 1.5em;
 }
 
 @media screen and (max-width: 400px) {
